--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		<title>H. Jansma</title>
+		<title>U. Atlı</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
 			<!--
@@ -36,7 +36,7 @@
 	      <div class="container main-menu">
 	        <div class="row align-items-center justify-content-between d-flex">
 	          <div class id="logo">
-	            <a href="/"><h3>H. Jansma </h3></a>
+	            <a href="/"><h3>U. Atlı </h3></a>
 	         </div>
 	          <nav id="nav-menu-container">
 	            <ul class="nav-menu">
@@ -45,8 +45,6 @@
 
 
 	              <li><a href="archive">Portfolio</a></li>
-	              <li><a href="huckleberry">Huck</a></li>
-                <li><a href="https://www.amyrayblog.com">The Wife</a> </li>
 	              <li><a href="HarrisonJansmaResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
 	              </ul>
 
@@ -61,7 +59,7 @@
 						<div class="col-lg-6 col-md-6 col-xs-6 banner-left">
 							<h5>I am</h5>
 
-							<h2 class="mt-10 mb-20">Harrison Jansma</h2>
+							<h2 class="mt-10 mb-20">Uğur Atlı</h2>
 							<p>
 								Contemplative coder and analyst. Inspired by tough problems.
 							</p>
@@ -79,19 +77,19 @@
 			<section class="home-about-area section-gap">
 				<div class="container">
 					<div class="row align-items-center justify-content-between personal-details">
-							<h1 class="text-uppercase">Personal Details</h1>
+							<h1 class="text-uppercase">About Me</h1>
 							<br>
 							<br>
 
 							<blockquote class="generic-blockquote">
 								<p class="fz-16">
 
-									 A few interesting things about me. I love to read science fiction (my favorite is Frank Herbert's Dune). I am also an avid gamer. I love to play competitive strategy games and first-person shooters. Lastly, I love learning. Every day I push myself to learn something new, whether that be about machine learning, software engineering, or miscellaneous facts about the universe.
+									A few things about me. I love learning. Every day I push myself to learn something new, whether that be about machine learning, deep learning, python, statistics, gaming, playing music, etc.
 								</p>
 								<p class="fz-16">
-									 On top of recently getting married and graduating with a masters in computer science from UT Dallas, I also recently started working as a senior data scientist at Capital One. My work mainly revolves around utilizing natural language processing to build a more intelligent customer experience.
 								</p>
-
+									more info
+								
 							</blockquote>
 							<a href="about" class="primary-btn text-uppercase">About me</a>
 
@@ -117,22 +115,10 @@
 					<div class="row">
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
-								<span class="lnr lnr-cloud-check"></span>
-								<a><h4>Cloud Compute</h4></a>
-								<p>
-										I utilize AWS to develop and productionize machine learning systems.
-								</p>
-							</div>
-						</div>
-
-
-
-						<div class="col-lg-4 col-md-6">
-							<div class="single-services">
 								<span class="lnr lnr-bubble"></span>
 								<a><h4>NLP</h4></a>
 								<p>
-									I apply text analytics to some of the hardest questions in business.
+									I love nlp.
 								</p>
 							</div>
 						</div>
@@ -153,7 +139,7 @@
 								<span class="lnr lnr-layers"></span>
 								<a><h4>Parallel Computing</h4></a>
 								<p>
-									HIVE, Hadoop, and Spark, Oh my!
+									Hadoop, and Spark.
 								</p>
 							</div>
 						</div>
@@ -162,7 +148,7 @@
 								<span class="lnr lnr-laptop-phone"></span>
 								<a><h4>Collaboration</h4></a>
 								<p>
-									I enjoy working with my team to create winning strategies.
+									I enjoy working with team to create winning strategies.
 								</p>
 							</div>
 						</div>
@@ -171,7 +157,7 @@
 								<span class="lnr lnr-chart-bars"></span>
 								<a><h4>Data Analytics</h4></a>
 								<p>
-									I love telling a story. Getting to the heart of a problem and coming up with a solution.
+									I love telling the story behind the numbers . Getting to the heart of a problem and coming up with a solution.
 								</p>
 							</div>
 						</div>
@@ -191,11 +177,6 @@
 					<div class="menu-content">
 							<div class="title text-center">
 									<h1 class="mb-10">Skills Expertisse</h1>
-									  1 - Basic <span style="display: inline-block; width: 2ch;">&#9;</span>
-										 2 - Novice <span style="display: inline-block; width: 2ch;">&#9;</span>
-										 3 - Intermediate<span style="display: inline-block; width: 2ch;">&#9;</span>
-										  <p>4 - Advanced<span style="display: inline-block; width: 2ch;">&#9;</span>
-											 5 - Expert<p/>
 							</div>
 					</div>
 			</div>
@@ -204,64 +185,36 @@
 <div class="container">
 		<div class="row skillbar-wraps">
 			<div class="col-lg-4 skill-left">
-				<h4 class="text-center pt-50"> Devops </h4>
 				<div class="single-skill">
 					<p>
 						Databases (SQL) -   5
 					</p>
-					<div class="skill" data-width="100"></div>
-				</div>
-
+				<div class="skill" data-width="100"></div>
+			</div>
+				<div class="col-lg-4 skill-right">
 				<div class="single-skill">
 					<p>
-						Servers (Linux / Bash) -   4
+						Python - 4
 					</p>
 					<div class="skill" data-width="80"></div>
 				</div>
 
+
 				<div class="single-skill">
 					<p>
-						Big Data (HIVE / Spark) - 3
+						NLP (Scikit-learn) - 4
+					</p>
+					<div class="skill" data-width="80"></div>
+				</div>
+
+			</div>
+
+			<div class="col-lg-4 skill-right">
+				<div class="single-skill">
+					<p>
+						Teaching / Presenting - 3
 					</p>
 					<div class="skill" data-width="60"></div>
-				</div>
-			</div>
-
-
-
-
-			<div class="col-lg-4 skill-right">
-				<h4 class="text-center pt-50">Machine Learning</h4>
-				<div class="single-skill">
-					<p>
-						Python - 5
-					</p>
-					<div class="skill" data-width="100"></div>
-				</div>
-				<div class="single-skill">
-					<p>
-						Computer Vision (TensorFlow) - 4
-					</p>
-					<div class="skill" data-width="80"></div>
-				</div>
-
-				<div class="single-skill">
-					<p>
-						NLP (Spacy / TensorFlow) - 4
-					</p>
-					<div class="skill" data-width="80"></div>
-				</div>
-
-			</div>
-
-			<div class="col-lg-4 skill-right">
-				<h4 class="text-center pt-50"> Data Analytics </h4>
-
-				<div class="single-skill">
-					<p>
-						Teaching / Presenting - 5
-					</p>
-					<div class="skill" data-width="100"></div>
 				</div>
 
 				<div class="single-skill">
@@ -274,9 +227,9 @@
 
 				<div class="single-skill">
 					<p>
-						Visualization (Tableau) - 3
+						Visualization (Matplotlib / Plotly) - 4
 					</p>
-					<div class="skill" data-width="60"></div>
+					<div class="skill" data-width="40"></div>
 				</div>
 
 			</div>
