--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 	      <div class="container main-menu">
 	        <div class="row align-items-center justify-content-between d-flex">
 	          <div class id="logo">
-	            <a href="/"><h3>H. Jansma </h3></a>
+	            <a href="/"><h3>U. Atlı </h3></a>
 	         </div>
 	          <nav id="nav-menu-container">
 	            <ul class="nav-menu">
@@ -45,8 +45,7 @@
 
 
 	              <li><a href="archive">Portfolio</a></li>
-	              <li><a href="huckleberry">Huck</a></li>
-                <li><a href="https://www.amyrayblog.com">The Wife</a> </li>
+
 	              <li><a href="HarrisonJansmaResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
 	              </ul>
 
@@ -75,7 +74,7 @@
 					<div class="section-top-border">
 					<div class="row align-items-center justify-content-between">
 						<div class="col-lg-6 col-md-6 home-about-left">
-							<img class="img-fluid" src="img/crop.jpg" alt="">
+							<img class="img-fluid" src="img/cover/pp.jpeg" alt="">
 						</div>
 						<div class="col-lg-5 col-md-6 home-about-right">
 							<h1 class="text-uppercase">Personal Details</h1>
@@ -115,150 +114,91 @@
                 </div>
             </div>
 			  <ul>
+
+
+
+
+
+				<li>
+					<div class="content">
+					  <h4>
+						<time>Lab Asistant</time>
+					  </h4>
+					  <p><b>Istanbul Technical University</b></p>
+					  <p>2015 - 2016</p>
+					  <p>Transferred directly to the PhD without graduating</p>
+					</div>
+				</li>
+
+			    <li>
+					<div class="content">
+					  <h4>
+						<time>Intern</time>
+					  </h4>
+					  <p><b>TUBİTAK MAM</b></p>
+					  <p><b>GPA:</b> 3.75 (On a scale of 4.00)</p>
+					  <p>2017 - 2020</p>
+					  <p>Transferred directly to the PhD without graduating</p>
+					</div>
+				</li>
+
 			    <li>
 			      <div class="content">
 			        <h4>
-			          <time>Bachelors in Mathematics and Economics</time>
+			          <time>Bachelors in Physics Engineering</time>
 			        </h4>
-			        <p><b>Baylor University 2017</b></p>
-			        <p><b>GPA:</b> 3.86 (On a scale of 4.00)</p>
-			      </div>
-			    </li>
-			    <li>
-			      <div class="content">
-			      	<img class="img-fluid mx-auto d-block mb-30" src="img/about/c-logo.png" alt="">
-			        <h4>
-			          <time>Business Analyst</time>
-			        </h4>
-							<p><b>DXC Technology</b></p>
-			        <p>November 2017 - March 2018</p>
+			        <p><b>Istanbul Technical University 2017</b></p>
+			        <p><b>GPA:</b> 3.03 (On a scale of 4.00)</p>
 			      </div>
 			    </li>
 
-					<li>
-					 <div class="content">
-						 <h4>
-							 <time>Freelance Data Scientist</time>
-						 </h4>
-						 <p><b>UpWork</b></p>
-						 <p>November 2018 - Sep 2019</p>
-					 </div>
-				 </li>
-				 <li>
-					 <div class="content">
-						 <h4>
-							 <time>Data Science Instructional Associate</time>
-						 </h4>
-						 <p><b>General Assembly</b></p>
-						 <p>March 2019 - July 2019</p>
-					 </div>
-				 </li>
-				 <li>
-					 <div class="content">
-						 <h4>
-							 <time>Data Science Intern</time>
-						 </h4>
-						 <p><b>Sprint - Intelligent Billing Systems</b></p>
-						 <p>May 2019 - Nov 2019</p>
-					 </div>
-				 </li>
-         <li>
-					 <div class="content">
-						 <h4>
-							 <time>Data Process Manager</time>
-						 </h4>
-						 <p><b>Capital One - Auto Financ</b></p>
-						 <p>April 2020 - May 2021</p>
-					 </div>
-				 </li>
-				 <li>
-					 <div class="content">
-						 <h4>
-							 <time>Masters in Computer Science</time>
-						 </h4>
-						 <p><b>University of Texas at Dallas</b></p>
-						 <p>August 2018 - May 2021</p>
-					 </div>
-				 </li>
-				 <li>
-					 <div class="content">
-						 <h4>
-							 <time>Senior Data Scientist</time>
-						 </h4>
-						 <p><b>Capital One - Auto Finance</b></p>
-						 <p>May 2021 - Present</p>
-					 </div>
-				 </li>
+
+
+			    <li>
+					<div class="content">
+					  <h4>
+						<time>M.Sc. in Physics Engineering</time>
+					  </h4>
+					  <p><b>Istanbul Technical University</b></p>
+					  <p><b>GPA:</b> 3.75 (On a scale of 4.00)</p>
+					  <p>2017 - 2020</p>
+					  <p>Transferred directly to the PhD without graduating</p>
+					</div>
+				</li>
+
+				<li>
+					<div class="content">
+					  <h4>
+						<time>TUBİTAK Project</time>
+					  </h4>
+					  <p><b>Istanbul Technical University</b></p>
+					  <p>2019 - 2021</p>
+					</div>
+				  </li>
+
+
+
+			    <li>
+					<div class="content">
+					  <h4>
+						<time>PhD in Physics Engineering</time>
+					  </h4>
+					  <p><b>Istanbul Technical University</b></p>
+					  <p><b>GPA:</b> 3.86 (On a scale of 4.00)</p>
+					  <p>2022 PhD candidate.</p>
+					  <p>2020 - 2023</p>
+					  <p>Left the doctorate</p>
+					</div>
+				  </li>
+
+
+
+
+
+
 			  </ul>
 			</section>
 			<hr id="FAQ">
-
-
-			<!-- End timeline Area -->
-			<section class="faq-area pb-80 pt-80">
-							<div class="container">
-								<div class="row d-flex justify-content-center">
-									<div class="menu-content pb-40 col-lg-8">
-										<div class="title text-center">
-											<h1 class="mb-10">Any Questions?</h1>
-										</div>
-									</div>
-								</div>
-								<div class="row justify-content-center">
-									<div class="col-lg-8">
-									<dl class="accordion">
-										<dt>
-											<a href="" class="active">Why did you make this website?</a>
-										</dt>
-										<dd style="display: block;">
-											I created and deployed this website on a private <a href="https://www.digitalocean.com/">DigitalOcean</a> server so that I could learn more about web app design and back-end development.</p>
-
-	   <p> In the future I will use this website as a nesting ground for web-based computer vision and NLP models. Though I don't expect it to be anything more than a portfolio site, I strongly suspect that these skills will be crucial to technological development in the years to come.</p>
-
-										</dd>
-
-										<dt>
-											<a href="">How long have you been practicing machine learning?</a>
-										</dt>
-										<dd style="display: none;">
-										<p>I discovered machine learning at the beginning of 2018 after graduating from Baylor University. Since then, I have immersed myself in data science communities on <a href="https://medium.com/">Medium</a> and across the web.</p>
-
-										<p>I have rich experience in building machine learning solutions for NLP tasks. I have built models to assist in sentiment analysis, demographic clustering, and topic modelling.</p>
-										</dd>
-
-										<dt>
-											<a href="">Do you have any experience working with databases?</a>
-										</dt>
-										<dd style="display: none;">
-										<p>I have hosted and deployed my own MySQL database with this website. I have a intermediate knowledge of SQL queries, and have had experience working with AWS and GCP database servers through SSH.</p>
-										<p>By renting servers from DigitalOcean, GCP, and AWS I have been able to develop my own back end production environment. I believe that data scientists who can own every step of the ML lifecycle will be invaluable in the coming years..</p>
-																			</dd>
-
-
-										<dt>
-											<a href="">Why are you interested in NLP / machine learning?</a>
-										</dt>
-										<dd style="display: none;">
-											<p>I am curious by nature. Machine learning and natural language processing are both excellent tools to understand the world better. </p>
-										<p>Despite the hype over integrating AI into existing technologies, the implementation of machine learning (especially NLP) is still in its infancy. This field is the wildwest, and I want to work with the pioneers and innovators that create new and amazing things.</p>
-										</dd>
-
-
-
-
-									<dt>
-										<a href=""> What kind of work do you see yourself doing? </a>
-									</dt>
-									<dd style="display: none;">
-									<p>I am interested in building modular machine learning applications that can communicate with existing production systems.</p><p> Position titles that do this work are not well defined. I describe my perfect future position to be a mix of data science, machine learning engineering, and devops. Essentially a machine learning specialist with the skills to deploy a model to production.</p>
-									</dd>
-								</dl>
-
-									</div>
-								</div>
-							</div>
-						</section>
-
 </div>
 
 
