--- a/about.html
+++ b/about.html
@@ -79,26 +79,20 @@
 						<div class="col-lg-5 col-md-6 home-about-right">
 							<h1 class="text-uppercase">Personal Details</h1>
 							<p>
-								While I was at collage, I studied cosmology, computational physics and gravity theories. Academy was my dream, so I followed my dream. 
-								After graduating, I immediately started  MSc in Physics Engineering. During MSc, I had the opportunity to skip graduation and start PhD, so I did.
-								but I didn't know where my life was going. 
+								I graduated from Istanbul Technical University with a degree in physics engineering. I studied cosmology, computational physics and gravity theories at collage. Academy was my dream, so I followed my dream. 
+								After graduating, I immediately started  MSc in physics engineering. During MSc education, I had the opportunity to skip graduation and start PhD, so I did. At the begining of Phd, I didn't know where my life was going. 
+								After some serious self - reflection about my passions and interests, I committed to learning everything I could about machine learning, deep learning and data science. 
+								One term after passing qualification exam, I left my doctorate. Actually I took an indefinete time of break, it is an achieve I have to complete. </p><p>
 
 
-								While I was at collage, I studied cosmology, computational physics and gravity theories. Academy was my dream, so I followed my dream. 
-								After graduating, I immediately started  MSc in Physics Engineering. During MSc, I had the opportunity to skip graduation and start PhD, so I did.
-								but I didn't know where my life was going. 
-
-
-								While I was at collage, I studied cosmology, computational physics and gravity theories. Academy was my dream, so I followed my dream. 
-								After graduating, I immediately started  MSc in Physics Engineering. During MSc, I had the opportunity to skip graduation and start PhD, so I did.
-								but I didn't know where my life was going. 
-
-								While I was at collage, I studied cosmology, computational physics and gravity theories. Academy was my dream, so I followed my dream. 
-								After graduating, I immediately started  MSc in Physics Engineering. During MSc, I had the opportunity to skip graduation and start PhD, so I did.
-								but I didn't know where my life was going. 
+								After leaving PhD. I focused data science, I followed Udemy courses, webinears, read articles. I tried to upgrade myself almost every day, this was my passion.
+								I made some self - start projects both fulfill my desires and train myself, they are about NLP and finance.
+								NLP projects are mainly about sentiment analysis and text extraction, finance projects are mainly about price prediction, portfolio optimization, investment advice.</p><p>
+								
+								Recenly, I'm studying deep learning, working on another finance project and learning to play guitar. I'm trying to improve myself, there is no limit for learning. After all, the hunter is nothing without the hunt.
 
 							</p>
-							<a href="#FAQ" class="primary-btn text-uppercase">About Me</a>
+							<a href="#FAQ" class="primary-btn text-uppercase">Contact Me</a>
 						</div>
 
 
