--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
 								Recenly, I'm studying deep learning, working on another finance project and learning to play guitar. I'm trying to improve myself, there is no limit for learning. After all, the hunter is nothing without the hunt.
 
 							</p>
-							<a href="#FAQ" class="primary-btn text-uppercase">Contact Me</a>
+							<a href="#contact_" class="primary-btn text-uppercase">Contact</a>
 						</div>
 
 
@@ -154,8 +154,9 @@
 						<time>Lab Asistant</time>
 					  </h4>
 					  <p><b>Istanbul Technical University</b></p>
+					  <p>Fiz 101EL - Fiz 102EL</p>
+
 					  <p>2015 - 2016</p>
-					  <p>Transferred directly to the PhD without graduating</p>
 					</div>
 				</li>
 
@@ -165,11 +166,12 @@
 						<time>Intern</time>
 					  </h4>
 					  <p><b>TUBİTAK MAM</b></p>
-					  <p><b>GPA:</b> 3.75 (On a scale of 4.00)</p>
-					  <p>2017 - 2020</p>
-					  <p>Transferred directly to the PhD without graduating</p>
+					  <p>Accelerated Mass Spectroscopy (Ams) Laboratory</p>
+					  <p>2016 - 2017</p>
 					</div>
 				</li>
+
+
 
 			    <li>
 			      <div class="content">
@@ -195,12 +197,16 @@
 					</div>
 				</li>
 
+
+
 				<li>
 					<div class="content">
 					  <h4>
 						<time>TUBİTAK Project</time>
 					  </h4>
 					  <p><b>Istanbul Technical University</b></p>
+					  <p>Scholar Researcher</p>
+					  <p>Tubitak 1001Project, Off-Shell 6D/5D/4D relations.</p>
 					  <p>2019 - 2021</p>
 					</div>
 				  </li>
@@ -227,7 +233,7 @@
 
 			  </ul>
 			</section>
-			<hr id="FAQ">
+			<hr id="contact_">
 </div>
 
 
@@ -246,37 +252,57 @@
 			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 														</div>
 												</div>
+
+
+												
 												<div class="col-lg-5 col-md-6 col-sm-6">
 														<div class="single-footer-widget">
-																<h4>Newsletter</h4>
-																<p>Stay updated with my latest projects</p>
-								<div class="" id="mc_embed_signup">
-									 <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get">
-										<div class="input-group">
-											<input type="text" class="form-control" name="EMAIL" placeholder="Enter Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email Address '" required="" type="email">
-											<div class="input-group-btn">
-												<button class="btn btn-default" type="submit">
-													<span class="lnr lnr-arrow-right"></span>
-												</button>
-											</div>
-												<div class="info"></div>
-										</div>
-									</form>
-								</div>
-														</div>
-												</div>
-												<div class="col-lg-2 col-md-6 col-sm-6 social-widget">
-														<div class="single-footer-widget">
-																<h4>Follow Me</h4>
+																<h4>Contact Me</h4>
 																<p>Let's be social. </p>
 																<div class="footer-social d-flex align-items-center">
 																		<a href="https://medium.com/@harrisonjansma"><i class="fa fa-medium"></i></a>
 																		<a href="http://www.linkedin.com/in/harrisonjansma"><i class="fa fa-linkedin"></i></a>
 																		<a href="https://github.com/harrisonjansma"><i class="fa fa-github"></i></a>
-
-																</div>
+																	</div>
+								<div class="" id="mc_embed_signup">
+									<form method="POST" id="contactForm" name="contactForm">
+										<div class="row">
+											<div class="col-md-12">
+												<div class="form-group">
+													<input type="text" class="form-control" name="name" id="name" placeholder="Name">
+												</div>
+											</div>
+			
+			
+											<div class="col-md-12"> 
+												<div class="form-group">
+													<input type="email" class="form-control" name="email" id="email" placeholder="Email">
+												</div>
+											</div>
+			
+			
+											<div class="col-md-12">
+												<div class="form-group">
+													<input type="text" class="form-control" name="subject" id="subject" placeholder="Subject">
+												</div>
+											</div>
+											<div class="col-md-12">
+												<div class="form-group">
+													<textarea name="message" class="form-control" id="message" cols="30" rows="7" placeholder="Message"></textarea>
+												</div>
+											</div>
+											<div class="col-md-12">
+												<div class="form-group">
+													<input type="submit" value="Send Message" class="btn btn-primary">
+													<div class="submitting"></div>
+												</div>
+											</div>
+										</div>
+									</form>
+								</div>
 														</div>
 												</div>
+
 										</div>
 								</div>
 						</footer>
