--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 
 	              <li><a href="archive">Portfolio</a></li>
 
-	              <li><a href="HarrisonJansmaResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
+	              <li><a href="UgurAtliResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
 	              </ul>
 
 	          </nav><!-- #nav-menu-container -->
@@ -205,7 +205,7 @@
 						<time>TUBİTAK Project</time>
 					  </h4>
 					  <p><b>Istanbul Technical University</b></p>
-					  <p>Scholar Researcher</p>
+					  <p>3cholar Researcher</p>
 					  <p>Tubitak 1001Project, Off-Shell 6D/5D/4D relations.</p>
 					  <p>2019 - 2021</p>
 					</div>
@@ -258,11 +258,11 @@
 												<div class="col-lg-5 col-md-6 col-sm-6">
 														<div class="single-footer-widget">
 																<h4>Contact Me</h4>
-																<p>Let's be social. </p>
+
 																<div class="footer-social d-flex align-items-center">
-																		<a href="https://medium.com/@harrisonjansma"><i class="fa fa-medium"></i></a>
-																		<a href="http://www.linkedin.com/in/harrisonjansma"><i class="fa fa-linkedin"></i></a>
-																		<a href="https://github.com/harrisonjansma"><i class="fa fa-github"></i></a>
+																		<a href="https://www.linkedin.com/in/uğur-atlı-527a6a20a"><i class="fa fa-linkedin"></i></a>
+																		<a href="https://github.com/uguratli"><i class="fa fa-github"></i></a>
+																		
 																	</div>
 								<div class="" id="mc_embed_signup">
 									<form method="POST" id="contactForm" name="contactForm">
