--- a/about.html
+++ b/about.html
@@ -265,7 +265,7 @@
 																		
 																	</div>
 								<div class="" id="mc_embed_signup">
-									<form method="POST" id="contactForm" name="contactForm">
+									<form action="https://formspree.io/f/mvgpoeop"  method="POST" id="contactForm" name="contactForm">
 										<div class="row">
 											<div class="col-md-12">
 												<div class="form-group">
