--- a/about.html
+++ b/about.html
@@ -265,40 +265,21 @@
 																		
 																	</div>
 								<div class="" id="mc_embed_signup">
-									<form action="https://formspree.io/f/mvgpoeop"  method="POST" id="contactForm" name="contactForm">
-										<div class="row">
-											<div class="col-md-12">
-												<div class="form-group">
-													<input type="text" class="form-control" name="name" id="name" placeholder="Name">
-												</div>
-											</div>
-			
-			
-											<div class="col-md-12"> 
-												<div class="form-group">
-													<input type="email" class="form-control" name="email" id="email" placeholder="Email">
-												</div>
-											</div>
-			
-			
-											<div class="col-md-12">
-												<div class="form-group">
-													<input type="text" class="form-control" name="subject" id="subject" placeholder="Subject">
-												</div>
-											</div>
-											<div class="col-md-12">
-												<div class="form-group">
-													<textarea name="message" class="form-control" id="message" cols="30" rows="7" placeholder="Message"></textarea>
-												</div>
-											</div>
-											<div class="col-md-12">
-												<div class="form-group">
-													<input type="submit" value="Send Message" class="btn btn-primary">
-													<div class="submitting"></div>
-												</div>
-											</div>
-										</div>
-									</form>
+									<form
+									action="https://formspree.io/f/mvgpoeop"
+									method="POST"
+								  >
+									<label>
+									  Your email:
+									  <input type="email" name="email">
+									</label>
+									<label>
+									  Your message:
+									  <textarea name="message"></textarea>
+									</label>
+									<!-- your other form fields go here -->
+									<button type="submit">Send</button>
+								  </form>
 								</div>
 														</div>
 												</div>
