--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 										<div class="contact-wrap w-100 p-md-5 p-4">
 											<h3 class="mb-4">Send message</h3>
 											<div id="form-message-warning" class="mb-4"></div> 
-											<form method="POST" id="contactForm" name="contactForm">
+											<form action="https://formspree.io/f/mvgpoeop" method="POST" id="contactForm" name="contactForm">
 												<div class="row">
 													<div class="col-md-6">
 														<div class="form-group">
