--- a/about.html
+++ b/about.html
@@ -42,6 +42,7 @@
 	            <ul class="nav-menu">
 	              <li><a href="/">Home</a></li>
 	              <li><a href="about">About</a></li>
+	              <li><a href="archive">Portfolio</a></li>
 
 	              <li><a href="UgurAtliResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
 	              </ul>
@@ -367,3 +368,4 @@
 
 		</body>
 	</html>
+<!--Lesser artists borrow; great artists steal-->
