--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 	<head>
 		<!-- Mobile Specific Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<!-- Favicon-->
-		<link rel="shortcut icon" href="img/fav.png">
 		<!-- Author Meta -->
-		<meta name="author" content="Harrison Jansma">
+		<meta name="author" content="Ugur Atli">
 		<!-- Meta Description -->
-		<meta name="description" content="A personal website built and deployed by Harrison Jansma.">
+		<meta name="description" content="A personal website built and deployed by Ugur Atli.">
 		<!-- Meta Keyword -->
 		<meta name="keywords" content="portfolio">
 		<!-- meta character set -->
@@ -60,7 +58,7 @@
 
 							<h2 class="mt-10 mb-20">Uğur Atlı</h2>
 							<p>
-								Contemplative coder and analyst. Inspired by tough problems.
+								Data scientist.
 							</p>
 							<a href="#myprojects" class="primary-btn text-uppercase mb-20">My Projects</a>
 						</div>
@@ -83,12 +81,10 @@
 							<blockquote class="generic-blockquote">
 								<p class="fz-16">
 
-									A few things about me. I love learning. Every day I push myself to learn something new, whether that be about machine learning, deep learning, python, statistics, gaming, playing music, etc.
+									A few things about me. I am a former physics Ph.D. candidate doing data science. I love learning. Every day I push myself to learn something new, whether that be about machine learning, deep learning, python, statistics, gaming, playing music, etc.
 								</p>
 								<p class="fz-16">
-								</p>
-									more info
-								
+								</p>								
 							</blockquote>
 							<a href="about" class="primary-btn text-uppercase">About me</a>
 
