--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							<blockquote class="generic-blockquote">
 								<p class="fz-16">
 
-									A few things about me. I am a former physics Ph.D. candidate doing data science. I love learning. Every day I push myself to learn something new, whether that be about machine learning, deep learning, python, statistics, gaming, playing music, etc.
+									I am a former physics Ph.D. candidate doing data science. I love learning. Everyday I push myself to learn something new, whether that be about machine learning, deep learning, python, statistics. Since we are endless learning machine, there is no limit for us, with help of good guide we can learn all. I am also a social-avid video gamer, I love simulating, analyzing, comparing my stats-gears-talents, also I love solving problems, completing tasks as team. I have been played with social guilds in World of Warcraft in different roles.
 								</p>
 								<p class="fz-16">
 								</p>								
