--- a/index.html
+++ b/index.html
@@ -81,9 +81,10 @@
 							<blockquote class="generic-blockquote">
 								<p class="fz-16">
 
-									I am a former physics Ph.D. candidate doing data science. I love learning. Everyday I push myself to learn something new, whether that be about machine learning, deep learning, python, statistics. Since we are endless learning machine, there is no limit for us, with help of good guide we can learn all. I am also a social-avid video gamer, I love simulating, analyzing, comparing my stats-gears-talents, also I love solving problems, completing tasks as team. I have been played with social guilds in World of Warcraft in different roles.
+									I am a former physics Ph.D. candidate doing data science. I love learning. Everyday I push myself to learn something new, whether that be about machine learning, deep learning, python, statistics. Since we are limitless learning machines, there is no end for learning. With help of good guide, we can learn all. I am also a social-avid video gamer, I love simulating, analyzing, comparing my stats-gears-talents, also I love solving problems, completing tasks, doing progress as team. I have been played with social guilds in World of Warcraft in different roles.
 								</p>
 								<p class="fz-16">
+									Apart from these, I am studying deep learning and also I started two data science project one for natural language processing and the other for finance.
 								</p>								
 							</blockquote>
 							<a href="about" class="primary-btn text-uppercase">About me</a>
@@ -113,7 +114,7 @@
 								<span class="lnr lnr-bubble"></span>
 								<a><h4>NLP</h4></a>
 								<p>
-									I love nlp.
+									I love nlp.  I apply text analytics to solve the mystery behind the words
 								</p>
 							</div>
 						</div>
@@ -143,7 +144,7 @@
 								<span class="lnr lnr-laptop-phone"></span>
 								<a><h4>Collaboration</h4></a>
 								<p>
-									I enjoy working with team to create winning strategies.
+									I enjoy working with team to create winning strategies, completing tasks.
 								</p>
 							</div>
 						</div>
