--- a/about.html
+++ b/about.html
@@ -3,6 +3,8 @@
 <head>
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!-- Favicon-->
+	<link rel="shortcut icon" href="img/fav.png">
 	<!-- Author Meta -->
 	<meta name="author" content="Ugur Atli">
 	<!-- Meta Description -->
@@ -81,11 +83,11 @@
 								One term after passing qualification exam, I left my doctorate. Actually I took an indefinete time of break, it is an achieve I have to complete. </p><p>
 
 
-								After leaving PhD. I focused data science, I followed Udemy courses, webinears, read articles. I tried to upgrade myself almost every day, this was my passion.
+								After leaving PhD. I focused data science, I followed online courses, webinears, read articles. I tried to upgrade myself almost every day, this was my passion.
 								I made some self - start projects both fulfill my desires and train myself, they are about NLP and finance.
 								NLP projects are mainly about sentiment analysis and text extraction, finance projects are mainly about price prediction, portfolio optimization, investment advice.</p><p>
 								
-								Recenly, I'm studying deep learning, working on another finance project and learning to play guitar. I'm trying to improve myself, there is no limit for learning. After all, the hunter is nothing without the hunt.
+								Recenly, I'm learning deep learning, working on another finance project and natural language processing project.
 
 							</p>
 							<a href="#contact_" class="primary-btn text-uppercase">Contact</a>
