--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<!-- Mobile Specific Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<!-- Favicon-->
+		<link rel="shortcut icon" href="img/fav.png">
 		<!-- Author Meta -->
 		<meta name="author" content="Ugur Atli">
 		<!-- Meta Description -->
@@ -81,10 +83,10 @@
 							<blockquote class="generic-blockquote">
 								<p class="fz-16">
 
-									I am a former physics Ph.D. candidate doing data science. I love learning. Everyday I push myself to learn something new, whether that be about machine learning, deep learning, python, statistics. Since we are limitless learning machines, there is no end for learning. With help of good guide, we can learn all. I am also a social-avid video gamer, I love simulating, analyzing, comparing my stats-gears-talents, also I love solving problems, completing tasks, doing progress as team. I have been played with social guilds in World of Warcraft in different roles.
+									I am a former physics Ph.D. candidate doing data science. I love learning. Everyday I push myself to learn something new, whether that be about machine learning, deep learning, python, statistics. Since we are limitless learning machines, there is no end for learning. I am also a social-avid video gamer, I love simulating, analyzing, comparing my , also I love solving problems, completing tasks, doing progress as a team.
 								</p>
 								<p class="fz-16">
-									Apart from these, I am studying deep learning and also I started two data science project one for natural language processing and the other for finance.
+									Apart from these, I am learning deep learning and also I started two data science project one for natural language processing and the other for finance.
 								</p>								
 							</blockquote>
 							<a href="about" class="primary-btn text-uppercase">About me</a>
@@ -114,7 +116,7 @@
 								<span class="lnr lnr-bubble"></span>
 								<a><h4>NLP</h4></a>
 								<p>
-									I love nlp.  I apply text analytics to solve the mystery behind the words
+									I love natural language processing. I apply text analytics to solve the mystery behind the words.
 								</p>
 							</div>
 						</div>
@@ -129,6 +131,15 @@
 							</div>
 						</div>
 
+						<div class="col-lg-4 col-md-6">
+							<div class="single-services">
+								<span class="lnr lnr-cog"></span>
+								<a><h4>Deep Learning</h4></a>
+								<p>
+									I am passionate about learning different tools to obtain a good model for the dataset.
+								</p>
+							</div>
+						</div>
 
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
@@ -187,6 +198,7 @@
 					</p>
 					<div class="skill" data-width="60"></div>
 				</div>
+
 				<div class="single-skill">
 					<p>
 						Python - 4
@@ -200,6 +212,19 @@
 					</p>
 					<div class="skill" data-width="80"></div>
 				</div>
+				<div class="single-skill">
+					<p>
+						Deep Learning (TensorFlow) - 3
+					</p>
+					<div class="skill" data-width="60"></div>
+				</div>
+				<div class="single-skill">
+					<p>
+						Spark - 2
+					</p>
+					<div class="skill" data-width="20"></div>
+				</div>
+
 				<div class="single-skill">
 					<p>
 						Teaching / Presenting - 3
