--- a/archive.html
+++ b/archive.html
@@ -3,6 +3,8 @@
 <head>
   <!-- Mobile Specific Meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Favicon-->
+  <link rel="shortcut icon" href="img/fav.png">
   <!-- Author Meta -->
   <meta name="author" content="Ugur Atli">
   <!-- Meta Description -->
