--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 						<div class="col-lg-5 col-md-6 home-about-right">
 							<h1 class="text-uppercase">Personal Details</h1>
 							<p>
-								I graduated from Istanbul Technical University with a degree in physics engineering. I studied cosmology, computational physics and gravity theories at collage. Academy was my dream, so I followed my dream. 
+								I graduated from Istanbul Technical University with a degree in physics engineering. Studied cosmology, computational physics and gravity theories at collage. Academy was my dream, so I followed my dream. 
 								After graduating, I immediately started  MSc in physics engineering. During MSc education, I had the opportunity to skip graduation and start PhD, so I did. At the begining of Phd, I didn't know where my life was going. 
 								After some serious self - reflection about my passions and interests, I committed to learning everything I could about machine learning, deep learning and data science. 
 								One term after passing qualification exam, I left my doctorate. Actually I took an indefinete time of break, it is an achieve I have to complete. </p><p>
