--- a/index.html
+++ b/index.html
@@ -456,6 +456,14 @@
 										<p><a href="https://github.com/uguratli"><i class="fa fa-github"></i> Github</a></p>
 									  </div>
 								  </div>
+
+								  <div class="dbox w-100 d-flex align-items-center">
+									<div class="text pl-3">
+									<p><a href="https://github.com/uguratli"><i class="fa fa-code"></i> Kaggle</a></p>
+									 </div>
+							   </div>
+
+
 							  </div>
 									</div>
 			
