--- a/archive.html
+++ b/archive.html
@@ -121,7 +121,7 @@ Making analysis for backpack with different brands and features, and making mode
                         <div class="row post-preview">
                           <div class="col-lg-3 col-md-3 col-xs-3 d-flex justify-content-center img-fluid align-self-center">
                             <a href="https://www.kaggle.com/code/uuratl/metacritic-content-based-game-recomendation" target="_blank">
-                              <img class="portfolio-photo" src="img/cover/world_map.png">
+                              <img class="portfolio-photo" src="img/cover/meta_dataset-cover.jpg">
                           </a>
                           </div>
 
@@ -132,7 +132,9 @@ Making analysis for backpack with different brands and features, and making mode
 
                             </h2>
                           <p>
-                            Making content based recomendation system by using combinations of cosine similary and Euclidean distance formula
+                            Making content based recomendation system with combinations of cosine similary and Euclidean distance formula by using game data 
+                            <a href="https://www.kaggle.com/datasets/uuratl/metacritic-games-12-23-2024">Metacritic Games 1995-2024</a>. Data collected from 
+                            <a href="https://www.metacritic.com/browse/game/">metacritic</a> with code   <a href="https://www.kaggle.com/code/uuratl/metacritic-data-collect/">Metacritic Data Collect</a>.
                             
                           </p>
                         </div>
