--- a/archive.html
+++ b/archive.html
@@ -91,7 +91,7 @@
 
                             </h2>
                           <p>
-Making analysis for backpack with different brands and features, and making model for price prediction using <a href="https://www.kaggle.com/competitions/playground-series-s5e2/data">Backpack Data</a>. Model uses combinations of several models, CATboostRegressor, LGBMRegressor, XGBRegressor with their optimal parameters from OPTUNA and linear regressor as meta learner.
+                          Making analysis for backpack with different brands and features, and making model for price prediction using <a href="https://www.kaggle.com/competitions/playground-series-s5e2/data">Backpack Data</a>. Model uses combinations of several models, CATboostRegressor, LGBMRegressor, XGBRegressor with their optimal parameters from OPTUNA and linear regressor as meta learner.
                           </div>
                         </div>
 
@@ -112,7 +112,7 @@ Making analysis for backpack with different brands and features, and making mode
 
                             </h2>
                           <p>
-                            Sticker sale prediction using <a href="https://www.kaggle.com/competitions/playground-series-s5e1/data">Forecasting Sticker Sales Data</a> and LGBMRegressor with optimized parameters from OPTUNA. </div>
+                          Sticker sale prediction using <a href="https://www.kaggle.com/competitions/playground-series-s5e1/data">Forecasting Sticker Sales Data</a> and LGBMRegressor with optimized parameters from OPTUNA. </div>
                         </div>
 
                         <hr>
@@ -132,7 +132,7 @@ Making analysis for backpack with different brands and features, and making mode
 
                             </h2>
                           <p>
-                            Making content based recomendation system with combinations of cosine similary and Euclidean distance formula by using game data 
+                          Making content based recomendation system with combinations of cosine similary and Euclidean distance formula by using game data 
                             <a href="https://www.kaggle.com/datasets/uuratl/metacritic-games-12-23-2024">Metacritic Games 1995-2024</a>. Data collected from 
                             <a href="https://www.metacritic.com/browse/game/">metacritic</a> with code   <a href="https://www.kaggle.com/code/uuratl/metacritic-data-collect/">Metacritic Data Collect</a>.
                             
@@ -145,8 +145,8 @@ Making analysis for backpack with different brands and features, and making mode
 
                         <div class="row post-preview">
                           <div class="col-lg-3 col-md-3 col-xs-3 d-flex justify-content-center img-fluid align-self-center">
-                            <a href="https://www.kaggle.com/code/uuratl/mental-health-sentiment-analysis-multi-channel-cnn" target="_blank">
-                              <img class="portfolio-photo" src="img/cover/world_map.png">
+                            <a href="https://www.kaggle.com/code/uuratl/metacritic-games-eda" target="_blank">
+                              <img class="portfolio-photo" src="img/cover/meta_dataset-cover.jpg">
                           </a>
                           </div>
 
@@ -157,7 +157,7 @@ Making analysis for backpack with different brands and features, and making mode
 
                             </h2>
                           <p>
-NLP project about sentiment analysis with using comments of selected TWS products on Hepsiburada.com. I wrote a BS4 code to collect data, after cleaning, several models are tested and optimized suitable one.</p>
+                          Exploratory data analysis and data cleaning for <a href="https://www.kaggle.com/datasets/uuratl/metacritic-games-12-23-2024">Metacritic Games 1995-2024</a> data.</p>
                         </div>
                         </div>
 
@@ -165,8 +165,8 @@ NLP project about sentiment analysis with using comments of selected TWS product
 
                         <div class="row post-preview">
                           <div class="col-lg-3 col-md-3 col-xs-3 d-flex justify-content-center img-fluid align-self-center">
-                            <a href="https://www.kaggle.com/code/uuratl/mental-health-sentiment-analysis-multi-channel-cnn" target="_blank">
-                              <img class="portfolio-photo" src="img/cover/world_map.png">
+                            <a href="https://www.kaggle.com/code/uuratl/metacritic-data-collect/" target="_blank">
+                              <img class="portfolio-photo" src="img/cover/meta_dataset-cover.jpg">
                           </a>
                           </div>
 
@@ -177,7 +177,7 @@ NLP project about sentiment analysis with using comments of selected TWS product
 
                             </h2>
                           <p>
-NLP project about sentiment analysis with using comments of selected TWS products on Hepsiburada.com. I wrote a BS4 code to collect data, after cleaning, several models are tested and optimized suitable one.</p>
+                          BS4 code for collecting data from <a href="https://www.metacritic.com/browse/game/">metacritic</a>. Code collects all games for all platforms, but it can be easily modified for specific searches.</p>
                         </div>
                         </div>
 
@@ -188,8 +188,8 @@ NLP project about sentiment analysis with using comments of selected TWS product
 
                         <div class="row post-preview">
                           <div class="col-lg-3 col-md-3 col-xs-3 d-flex justify-content-center img-fluid align-self-center">
-                            <a href="https://www.kaggle.com/code/uuratl/mental-health-sentiment-analysis-multi-channel-cnn" target="_blank">
-                              <img class="portfolio-photo" src="img/cover/world_map.png">
+                            <a href="https://www.kaggle.com/code/uuratl/nyc-restaurants-eda-analysis-recommendation" target="_blank">
+                              <img class="portfolio-photo" src="img/cover/dataset-nyc.jpg">
                           </a>
                           </div>
 
@@ -200,7 +200,7 @@ NLP project about sentiment analysis with using comments of selected TWS product
 
                             </h2>
                           <p>
-NLP project about sentiment analysis with using comments of selected TWS products on Hepsiburada.com. I wrote a BS4 code to collect data, after cleaning, several models are tested and optimized suitable one.</p>
+                          Exploratory data analysis, data cleaning and basic collaborative filtering restaurant recomendation system for <a href="https://www.kaggle.com/datasets/ahsan81/food-ordering-and-delivery-app-dataset">NYC Restaurants Data - Food Ordering and Delivery</a> data.</p>
                         </div>
                         </div>
 
