--- a/archive.html
+++ b/archive.html
@@ -209,8 +209,8 @@
 
                         <div class="row post-preview">
                           <div class="col-lg-3 col-md-3 col-xs-3 d-flex justify-content-center img-fluid align-self-center">
-                            <a href="https://www.kaggle.com/code/uuratl/mental-health-sentiment-analysis-multi-channel-cnn" target="_blank">
-                              <img class="portfolio-photo" src="img/cover/world_map.png">
+                            <a href="https://www.kaggle.com/code/uuratl/fantasy-basketball-group-creator" target="_blank">
+                              <img class="portfolio-photo" src="img/cover/basketball.jpg">
                           </a>
                           </div>
 
@@ -221,7 +221,7 @@
 
                             </h2>
                           <p>
-NLP project about sentiment analysis with using comments of selected TWS products on Hepsiburada.com. I wrote a BS4 code to collect data, after cleaning, several models are tested and optimized suitable one.</p>
+                          Filtering players according to their roles, picking and grouping players in pick range. Comparing groups to find one with best composition.</p>
                         </div>
                         </div>
 
